-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.2
-
None
-
MacOS X 10.6
-
-
35a11d6fce6820fa71db7c8b696d25b5de508277
For a non-administrator user, using a QSettings object with QSettings::SystemScope, QSettings::isWritable() returns true, although the sync() call will fail.
Example program attached. Run as non-admin. QSettings::isWritable() should return false.